# Hackathon_2023_AI_for_good

./: .gitignore  .pre-commit-config.yaml  Docs.md  README.md  analysis.py  batch_evaluator.py  evaluator.py  feature.py  feature_extractor.py  main.py  model.py  plot.py  pyproject.toml  sketch_stablediffusionwebapi.py
.github/workflows/: python-package.yaml
ai_biases_analyzer/: __init__.py  evaluator.py  feature.py  main.py  model.py  plot.py
ai_biases_analyzer/utils/: config.py  logger.py
app/: app.py
app/pages/: action_bias.py  descriptor_bias.py  profession_bias.py  summary.py
config/: config.ini
tests/: test_end_to_end_0.py
utils/: config.py  logger.py
