[tool.poetry]
name = "ai-biases-analyzer"
version = "0.1.0"
description = "A biases analyzer for generative AI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ai_biases_analyzer"}]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
deepface = "^0.0.79"
pre-commit = "^3.5.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
